feat(build): 添加前端构建和资源复制的Maven插件
为项目添加了前端构建支持，包括npm安装和构建步骤，以及将前端资源复制到静态目录的功能。

- 添加exec-maven-plugin用于执行npm install和npm run build
- 添加maven-resources-plugin将web/dist目录下的前端资源复制到classpath:/static/
- 配置了前端构建的执行阶段为generate-resources

docs(gitignore): 移除.vscode目录忽略规则

从.gitignore文件中移除了.vscode/目录的忽略规则，允许VS Code配置文件被版本控制。

fix(security): 更新安全配置以允许首页和静态资源访问

修改SecurityConfig配置，添加对根路径(/)和index.html的访问权限，
确保前端页面能够正常访问。

- 添加"/"和"/index.html"到permitAll的请求匹配器中
- 保持其他API和资源的访问控制策略不变

--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,67 @@
                     </excludes>
                 </configuration>
             </plugin>
+            
+            <!-- 1. Install & Build Frontend -->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.1.0</version>
+                <executions>
+                    <execution>
+                        <id>frontend-install</id>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                        <phase>generate-resources</phase>
+                        <configuration>
+                            <executable>npm</executable>
+                            <arguments>
+                                <argument>install</argument>
+                            </arguments>
+                            <workingDirectory>${project.basedir}/web</workingDirectory>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>frontend-build</id>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                        <phase>generate-resources</phase>
+                        <configuration>
+                            <executable>npm</executable>
+                            <arguments>
+                                <argument>run</argument>
+                                <argument>build</argument>
+                            </arguments>
+                            <workingDirectory>${project.basedir}/web</workingDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <!-- 2. Copy Frontend to Static -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>copy-frontend-static</id>
+                        <phase>generate-resources</phase>
+                        <goals>
+                            <goal>copy-resources</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${project.build.outputDirectory}/static</outputDirectory>
+                            <resources>
+                                <resource>
+                                    <directory>${project.basedir}/web/dist</directory>
+                                </resource>
+                            </resources>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 </project>
