feat(auth): 添加Go OIDC客户端示例和相关配置
- 在VSCode任务中添加"Run Go Demo"任务，用于运行Go示例应用
- 在数据初始化组件中添加Go演示客户端的初始化逻辑
- 创建Go OIDC客户端的注册配置，包括客户端ID、密钥和授权类型
- 更新调试控制器以显示客户端授权类型和密钥信息
- 调整安全配置，为Token端点设置401未授权状态，防止重定向到登录页
- 为/oauth2/**路径配置HTTP状态入口点，统一处理认证异常
- 在应用配置中启用Spring Security的TRACE日志级别，便于调试OIDC相关功能

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -69,6 +69,15 @@
                 "cwd": "${workspaceFolder}/examples/vue-pkce"
             },
             "group": "test",
+        },
+        {
+            "label": "Run Go Demo",
+            "type": "shell",
+            "command": "go run .",
+            "options": {
+                "cwd": "${workspaceFolder}/examples/go-oidc-client"
+            },
+            "group": "test",
             "presentation": {
                 "reveal": "always",
                 "panel": "shared"
